--- a/meaning/public/index.html
+++ b/meaning/public/index.html
@@ -22,6 +22,18 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <style>
+      * {
+        font-family: "Lato", sans-serif;
+        margin: 0;
+      }
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;800;900;1000&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
